# AL-tutorial

./: .gitignore  README.md  ToDo.md  environment.yml  pyproject.toml  setup.py
alt/: functions.py
checkpoints/eigen-inference/: test.extxyz  train.extxyz
checkpoints/models/: mace.com=0_compiled.model  mace.com=1_compiled.model  mace.com=2_compiled.model  mace.com=3_compiled.model
checkpoints/models-refined/: mace.com=0_compiled.model  mace.com=1_compiled.model  mace.com=2_compiled.model  mace.com=3_compiled.model
initial-datasets/: H.extxyz  O.extxyz
initial-datasets/W64/: W64-bulk.out
initial-datasets/old-zundel/: run.sbatch  zundel-1.ener  zundel.inp
initial-datasets/water/: README.md  run-me.py
initial-datasets/zundel/: H5O2+-MP2-6311++Gss-10.0A.xyz  aims.extxyz  train.extxyz  ~train.extxyz
ipi-examples/: clean.sh  committee4nvt.ffdirect.xml  committee4nvt.ffsocket.xml  ffdirect.xml  ffsocket.xml  run.sh
ipi-examples/eigen-inference/: #RESTART#0#  RESTART  committee4nvt.ffsocket.xml  eigen-inference.extxyz  error.txt  ipi.mace_force_0.extxyz  ipi.mace_force_1.extxyz  ipi.mace_force_2.extxyz  ipi.mace_force_3.extxyz  ipi.mace_properties  ipi.mean_force_0.xyz  ipi.mean_properties.out  ipi.pos_0.extxyz  run.sh  traj.extxyz
notebooks/: .gitignore  1-zundel.ipynb  2-eigen.ipynb  README.md  active-learning.ipynb  clean.sh  eigen-inference.ipynb  eigen.ipynb  eigen.py  inference.ipynb  myfunctions.py  nohup.out  notebook.mplstyle  run-qbc.py  script.py  train-template.yaml  tutorial.ipynb  zundel-inference.ipynb
tests/: check.py
(+36 files in other folders)
