[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alt"
version = "0.1.0"
description = "Active Learning Tutorial"
authors = [
  { name = "Krystof Brezina" },
  { name = "Shubham Sharma" },
  { name = "Elia Stocco" }
]
requires-python = ">=3.9"

dependencies = [
  "numpy",
  "matplotlib",
  "jupytext",
  "torch>=1.12",
  "mace-torch"
]

[project.optional-dependencies]
notebooks = ["jupyter"]

[project.urls]
# Homepage = "https://your.project.homepage"  # Optional
# Repository = "https://github.com/your/repo"  # Optional

